--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
-    "next": "^15.5.3",
+    "next": "^15.5.12",
     "next-pwa": "^5.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.1.2",
     "resend": "^6.0.1",
